fix navbar z-index

--- a/src/base/navbar/navbar.pcss
+++ b/src/base/navbar/navbar.pcss
@@ -2,7 +2,7 @@
 .navbar-cnt {
   .navbar {
     position: fixed;
-    z-index: 20;
+    z-index: 9;
     right: 0;
     bottom: 0;
     left: 0;
